--- a/src/components/info-card/info-card.css
+++ b/src/components/info-card/info-card.css
@@ -1,1 +1,2 @@
-.info-card{border-color:#4b4f55;}
+.info-card{border-color:#4b4f55;padding:15px 16px}
+.info-card-info{width:calc(100% - 220px);display:inline-block;margin-left:20px}
