--- a/src/components/congratulations/congratulations.css
+++ b/src/components/congratulations/congratulations.css
@@ -1,7 +1,4 @@
-.congratulations{margin:15px 0px;}
-
-
-.congratulations .card{margin-top:15px;padding:150px 0px;font-size:2rem;text-align:center;border-color:#4b4f55;color:#fff;border-radius: 0.6rem;}
-
+.congratulations{padding:15px 0px;height: 100vh; }
+.congratulations .card{margin-top:15px;padding:150px 0px;font-size:2rem;text-align:center;border-color:#4b4f55;color:#fff;border-radius: 0.25rem;}
 .congratulations .h1{font-size:3rem!important;margin-bottom:30px;}
 .congratulations span{font-size:2.5rem;color:#007bff;display:contents}
