--- a/src/components/answer-choice-list-item/answer-choice-list-item.css
+++ b/src/components/answer-choice-list-item/answer-choice-list-item.css
@@ -1,3 +1,4 @@
 .li-circle{display:inline-block;background-color:#4b4f55;width:10px;height:10px;border-radius: 50%;margin-right:10px}
 .error{background-color:red;}
 .right{background-color:#007bff}
+.list-group{width:100%}
