--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,2 +1,4 @@
+body{min-width:320px}
 .body{color:#fff;}
-.row{margin-right: 0px;}
+/*.row{margin-right: 0px;}*/
+.col-md-6{display: flex;width:100%}
