--- a/src/components/btn-next-level/btn-next-level.css
+++ b/src/components/btn-next-level/btn-next-level.css
@@ -3,4 +3,4 @@
 .btn-primary:not([disabled]):not(.disabled):hover, 
 .btn-primary:not([disabled]):not(.disabled):focus
     {background-color:#5bc0de;border-color:#007bff;background-image:none;}
-.btn-lg{border-radius: 0.6rem;}
+.btn-lg{border-radius: 0.25rem;font-size:15px;padding: 0.375rem 0.75rem;}
