--- a/src/components/element-image/element-image.css
+++ b/src/components/element-image/element-image.css
@@ -1,1 +1,1 @@
-.element-image{width: 200px;height: 155px;border-radius: 10px;}
+.element-image{width: 200px;height: 155px;border-radius: 0.25rem;margin-right:2rem}
