--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,4 +1,5 @@
 body{min-width:320px}
 .body{color:#fff;}
 /*.row{margin-right: 0px;}*/
+:focus,button:focus{outline:none}
 .col-md-6{display: flex;width:100%}
